--- a/flags-fantasy-codepen.html
+++ b/flags-fantasy-codepen.html
@@ -30,9 +30,9 @@ tspan { white-space:pre }
 <div>
 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 70 47" width="70" height="47">
 	<g id="JSI">
-		<path id="Rounded Rectangle 7 copy" class="shp0" d="M6.36 0L63.64 0C67.15 0 70 2.87 70 6.41L70 40.59C70 44.13 67.15 47 63.64 47L6.36 47C2.85 47 0 44.13 0 40.59L0 6.41C0 2.87 2.85 0 6.36 0Z" />
-		<path id="Rectangle 1 copy 18" class="shp1" d="M0 0L70 0L70 16L0 16L0 0Z" />
-		<path id="Rectangle 1 copy 18" class="shp2" d="M0 31L70 31L70 47L0 47L0 31Z" />
+		<path id="Rounded Rectangle 7 copy" fill="#e4e7fa" d="M6.36 0L63.64 0C67.15 0 70 2.87 70 6.41L70 40.59C70 44.13 67.15 47 63.64 47L6.36 47C2.85 47 0 44.13 0 40.59L0 6.41C0 2.87 2.85 0 6.36 0Z" />
+		<path id="Rectangle 1 copy 18" fill="#ad55e5" d="M0 0L70 0L70 16L0 16L0 0Z" />
+		<path id="Rectangle 1 copy 18" fill="#4549dc" d="M0 31L70 31L70 47L0 47L0 31Z" />
 	</g>
   <g stroke-width="0.1" fill="white" stroke="#d3d3d7" style="transform: translate(23px, 13px)">
    
